[gd_scene load_steps=8 format=3 uid="uid://bij64nm8l8lic"]

[ext_resource type="Theme" uid="uid://bpxh7lh817tql" path="res://themes/ui.tres" id="1_j3ik4"]
[ext_resource type="Script" path="res://game_ui.gd" id="2_g3dmm"]
[ext_resource type="Texture2D" uid="uid://blr2tw7qg7o1b" path="res://warning_x.png" id="3_4vaen"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fak5i"]
bg_color = Color(0.403375, 0.3975, 0.75, 1)
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_341wg"]
bg_color = Color(0.445935, 0.268402, 0.158406, 1)
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dr2ui"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hi1rr"]
bg_color = Color(1, 0.841833, 0.27, 1)

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_j3ik4")
script = ExtResource("2_g3dmm")

[node name="ScorePanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.017
anchor_top = 0.03
anchor_right = 0.017
anchor_bottom = 0.03
offset_left = -0.640003
offset_top = -0.400002
offset_right = 511.36
offset_bottom = 127.6
theme_override_styles/panel = SubResource("StyleBoxFlat_fak5i")

[node name="MarginContainer" type="MarginContainer" parent="ScorePanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="HSplitContainer" type="HBoxContainer" parent="ScorePanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScoreLabel" type="RichTextLabel" parent="ScorePanelContainer/MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 64
text = "Score: "
fit_content = true
autowrap_mode = 0

[node name="Score" type="RichTextLabel" parent="ScorePanelContainer/MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 64
text = "0"
fit_content = true
autowrap_mode = 0

[node name="TaskPanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.03
anchor_right = 0.75
anchor_bottom = 0.03
offset_left = -0.00012207
offset_top = -0.400002
offset_right = 448.0
offset_bottom = 271.6
theme_override_styles/panel = SubResource("StyleBoxFlat_341wg")

[node name="VBoxContainer" type="VBoxContainer" parent="TaskPanelContainer"]
layout_mode = 2

[node name="TaskLabel" type="RichTextLabel" parent="TaskPanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]Tasks[/center]"
fit_content = true

[node name="TaskContainer" type="VBoxContainer" parent="TaskPanelContainer/VBoxContainer"]
layout_mode = 2

[node name="WarningPanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.017
anchor_top = 0.978
anchor_right = 0.017
anchor_bottom = 0.978
offset_left = -0.640003
offset_top = -192.24
offset_right = 665.36
offset_bottom = -0.23999
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dr2ui")

[node name="MarginContainer" type="MarginContainer" parent="WarningPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="WarningsContainer" type="HBoxContainer" parent="WarningPanelContainer/MarginContainer"]
layout_mode = 2

[node name="Warning" type="MarginContainer" parent="WarningPanelContainer/MarginContainer/WarningsContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="WarningPanelContainer/MarginContainer/WarningsContainer/Warning"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hi1rr")

[node name="MarginContainer" type="MarginContainer" parent="WarningPanelContainer/MarginContainer/WarningsContainer/Warning"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="RichTextLabel" type="RichTextLabel" parent="WarningPanelContainer/MarginContainer/WarningsContainer/Warning/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Get Water"
fit_content = true
autowrap_mode = 0

[node name="XTexture" type="TextureRect" parent="WarningPanelContainer/MarginContainer/WarningsContainer/Warning"]
modulate = Color(1, 1, 1, 0.184314)
layout_mode = 2
texture = ExtResource("3_4vaen")

[node name="Warning2" type="MarginContainer" parent="WarningPanelContainer/MarginContainer/WarningsContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="WarningPanelContainer/MarginContainer/WarningsContainer/Warning2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hi1rr")

[node name="MarginContainer" type="MarginContainer" parent="WarningPanelContainer/MarginContainer/WarningsContainer/Warning2"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="RichTextLabel" type="RichTextLabel" parent="WarningPanelContainer/MarginContainer/WarningsContainer/Warning2/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Get Water"
fit_content = true
autowrap_mode = 0

[node name="XTexture" type="TextureRect" parent="WarningPanelContainer/MarginContainer/WarningsContainer/Warning2"]
modulate = Color(1, 1, 1, 0.184314)
layout_mode = 2
texture = ExtResource("3_4vaen")

[node name="Warning3" type="MarginContainer" parent="WarningPanelContainer/MarginContainer/WarningsContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="WarningPanelContainer/MarginContainer/WarningsContainer/Warning3"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hi1rr")

[node name="MarginContainer" type="MarginContainer" parent="WarningPanelContainer/MarginContainer/WarningsContainer/Warning3"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="RichTextLabel" type="RichTextLabel" parent="WarningPanelContainer/MarginContainer/WarningsContainer/Warning3/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Get Water"
fit_content = true
autowrap_mode = 0

[node name="XTexture" type="TextureRect" parent="WarningPanelContainer/MarginContainer/WarningsContainer/Warning3"]
modulate = Color(1, 1, 1, 0.184314)
layout_mode = 2
texture = ExtResource("3_4vaen")
